--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ h1,h2,h3,h4,h5,img,li{
 
 @layer base {
   body {
-    @apply relative z-1 font-inter text-regular font-normal text-waterloo dark:text-manatee bg-primary;
+    @apply relative text-waterloo dark:text-manatee bg-primary;
   }
 }
 
@@ -45,16 +45,4 @@ h1,h2,h3,h4,h5,img,li{
       brightness(100%) contrast(105%);
   }
 }
-
-pre {
-  @apply relative mb-2 rounded-lg bg-strokedark px-4 py-2;
-}
-.prism-copy-button {
-  @apply absolute right-2 top-2 h-[26px] rounded bg-white px-4 text-primary;
-}
-
-.active-tab {
-  @apply bg-stroke text-black dark:bg-blackho dark:text-white;
-}
-
 
